// Copyright (c) 2023 MASSA LABS <info@massa.net>

syntax = "proto3";

package massa.api.v1;

option csharp_namespace = "Com.Massa.Api.V1";
option go_package = "github.com/massalabs/massa/api/v1;v1";
option java_multiple_files = true;
option java_package = "com.massa.api.v1";
option objc_class_prefix = "GRPC";
option php_namespace = "Com\\Massa\\Api\\V1";
option ruby_package = "Com::Massa::Api::V1";
option swift_prefix = "GRPC";

// Entry for GetMipStatusResponse
message MipStatusEntry {
  // Mip info
  MipInfo mip_info = 1;
  // state id
  ComponentStateId state_id = 2;
}

// Same as MipInfo struct in versioning package
message MipInfo {
  string name = 1;
  fixed32 version = 2;
  fixed64 start = 3;
  fixed64 timeout = 4;
  fixed64 activation_delay = 5;
  repeated MipComponentEntry components = 6;
}

message MipComponentEntry {
  MipComponent kind = 1;
  fixed32 version = 2;
}

// Same as ComponentStateId enum in versioning package
enum ComponentStateId {
  COMPONENT_STATE_ID_UNSPECIFIED = 0;
  COMPONENT_STATE_ID_ERROR = 1;
  COMPONENT_STATE_ID_DEFINED = 2;
  COMPONENT_STATE_ID_STARTED = 3;
  COMPONENT_STATE_ID_LOCKEDIN = 4;
  COMPONENT_STATE_ID_ACTIVE = 5;
  COMPONENT_STATE_ID_FAILED = 6;
}

// Same as MipComponent enum in versioning package
enum MipComponent {
  MIP_COMPONENT_UNSPECIFIED = 0;
  MIP_COMPONENT_ADDRESS = 1;
  MIP_COMPONENT_KEYPAIR = 2;
}
